--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,15 @@
+html {
+  font-size: 18px;
+}
+
 body {
+  font-family: Helvetica;
+  line-height: 1.4;
+}
+
+h1,
+h4 {
+  font-weight: bold;
 }
 
 /* Header */
@@ -6,4 +17,190 @@ body {
 .company {
   background-color: black;
   color: white;
+}
+
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.company .container {
+  display: flex;
+  align-items: center;
+  padding: .66rem 0 .66rem 0.5rem;
+}
+
+.company img {
+  height: 1.5rem;
+  padding-right: 1rem;
+}
+
+
+
+/* New Arrival Banner */
+
+.mainBanner {
+  background: url("c:/Projects/SecretAgentSupply/resources/images/moto.jpeg");
+  height: 25rem;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.newArrival {
+  background-color: black;
+  color: white;
+  width: 20rem;
+  font-weight: bold;
+  position: relative;
+  padding: 2rem 3rem;
+  top: 9rem;
+}
+
+.newArrival h1 {
+  font-size: 2rem;
+  line-height: 1.2;
+  margin: 0 .25rem 0;
+}
+
+@media only screen and (max-width: 470px) {
+  .mainBanner {
+    height: 15rem;
+  }
+
+  .newArrival {
+    width: 100%;
+    padding: 1rem 2rem;
+    top: 10rem;
+  }
+
+  .headline h4 {
+    font-size: .77rem;
+  }
+
+  .headline h1 {
+    font-size: 1rem;
+  }
+}
+
+
+/* Navigation Bar */
+
+nav {
+  background-color: firebrick;
+  color: white;
+}
+
+nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.75em 0;
+}
+
+.mobile-nav {
+  display: none;
+}
+
+@media only screen and (max-width: 1024px) {
+  nav ul {
+    display: none;
+  }
+
+  .mobile-nav {
+    display: block;
+    text-align: center;
+  }
+}
+
+
+ /* Products */
+
+ .products,
+ .business-info {
+   display: flex;
+   justify-content: space-between;
+   margin-top: 3rem;
+ }
+
+ .product {
+   width: 30%;
+ }
+
+ .product-image {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 9rem;
+   padding: 2rem 0;
+   border: 4px solid black;
+ }
+
+ .product-image img {
+   max-width: 8rem;
+ }
+
+ .description {
+   display: block;
+   padding: 0.5rem;
+   background-color: black;
+   text-align: center;
+   color: white;
+ }
+
+ .info {
+   width: 35%;
+ }
+
+ .info .title {
+   display: block;
+   padding: 1rem 2rem;
+   background-color: black;
+   color: white;
+ }
+
+ @media only screen and (max-width: 1024px) {
+   .product {
+     width: 47%;
+   }
+
+   .product.glasses {
+     display: none;
+   }
+ }
+
+ @media only screen and (max-width: 470px) {
+   .products,
+   .business-info {
+     flex-wrap: wrap;
+   }
+
+   .product {
+     width: 90%;
+     margin: auto;
+   }
+
+   .product.watch {
+     display: none;
+   }
+
+   .info {
+     width: 90%;
+     margin: 0.5rem auto;
+   }
+ }
+
+ /* Footer */
+
+footer {
+  padding: 5rem 0;
+  margin-top: 4rem;
+  background-color: black;
+  color: white;
+}
+
+@media only screen and (max-width: 470px) {
+  footer {
+    text-align: center;
+  }
 }
